[package]
name = "bevy_winit"
version = "0.12.0-dev"
edition = "2021"
description = "A winit window and input backend for Bevy Engine"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
trace = []
wayland = ["winit/wayland", "winit/wayland-csd-adwaita"]

[dependencies]
# bevy
bevy_a11y = { path = "../bevy_a11y", version = "0.12.0-dev" }
bevy_app = { path = "../bevy_app", version = "0.12.0-dev" }
bevy_derive = { path = "../bevy_derive", version = "0.12.0-dev" }
bevy_ecs = { path = "../bevy_ecs", version = "0.12.0-dev" }
bevy_hierarchy = { path = "../bevy_hierarchy", version = "0.12.0-dev" }
bevy_input = { path = "../bevy_input", version = "0.12.0-dev" }
bevy_math = { path = "../bevy_math", version = "0.12.0-dev" }
bevy_window = { path = "../bevy_window", version = "0.12.0-dev" }
bevy_utils = { path = "../bevy_utils", version = "0.12.0-dev" }
bevy_tasks = { path = "../bevy_tasks", version = "0.12.0-dev" }

# other
winit = { version = "0.29.0-beta.0", default-features = false, git = "https://github.com/0x182d4454fb211940/winit.git", branch = "wayland-pen-support-rough" }
approx = { version = "0.5", default-features = false }
raw-window-handle = "0.5"

[package.metadata.docs.rs]
features = ["wayland"]
